add test assets

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheeet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav id="desktop-na">
+    <nav id="desktop-nav">
         <div class="logo"> Gabriel Breshears</div>
         <div>
-            <ul class="'nav-links">
+            <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -18,8 +18,6 @@
             </ul>
         </div>
     </nav>
-
-    <h1>Hello World</h1>
     
 </body>
 </html>
